refactor: rename admin.Input -> admin.Deduction
