# docs/swagger.json
@@ -34,7 +34,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/admin.Input"
+                            "$ref": "#/definitions/admin.Deduction"
                         }
                     }
                 ],
@@ -91,7 +91,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/admin.Input"
+                            "$ref": "#/definitions/admin.Deduction"
                         }
                     }
                 ],
@@ -215,20 +215,20 @@
         }
     },
     "definitions": {
-        "admin.Err": {
-            "type": "object",
-            "properties": {
-                "message": {
-                    "type": "string"
-                }
-            }
-        },
-        "admin.Input": {
+        "admin.Deduction": {
             "type": "object",
             "properties": {
                 "amount": {
                     "type": "number",
                     "minimum": 0
+                }
+            }
+        },
+        "admin.Err": {
+            "type": "object",
+            "properties": {
+                "message": {
+                    "type": "string"
                 }
             }
         },
